--- a/home.html
+++ b/home.html
@@ -9,14 +9,23 @@
   <link rel="stylesheet" href="css/style.css">
 
   <script src="assets/home.js" defer></script>
-  <script src="src/cart.js" defer></script>
   <script src="src/productList.js" defer></script>
   <script src="src/sort.js" defer></script>
+  <script src="src/cart.js" defer></script>
+  <script src="src/preloader.js" defer></script>
   <script src="src/products.js" defer></script>
 </head>
 <body>
 <!-- ***** POPUP SECTION START  *****-->
-   
+
+<div class="preloader">
+  <div class="preloader__circle">
+    <img src="img/favicon.png" alt="">
+  </div>
+  <div class="preloader__name">household of jewellery</div>
+</div>
+
+
 <section class="popup">
   <div class="popup__container">
     <header class="popup__head">
@@ -256,7 +265,7 @@
       <li class="head__subnav--item"><a href="#" class="head__subnav--link">necklaces</a></li>
       <li class="head__subnav--item"><a href="#" class="head__subnav--link">rings</a></li>
       <li class="head__subnav--item"><a href="#" class="head__subnav--link">bracelet</a></li>
-      <li class="head__subnav--item"><a href="html.pages/watch.html" class="head__subnav--link">watches</a></li>
+      <li class="head__subnav--item"><a href="watch.html" class="head__subnav--link">watches</a></li>
       <li class="head__subnav--item"><a href="#" class="head__subnav--link">accessories</a></li>
       <li class="head__subnav--item"><a href="#" class="head__subnav--link">custom</a></li>
     </ul>
